[tool.poetry]
name = "pubmed-paper-fetcher"
version = "0.1.0"
description = "Fetches PubMed papers with non-academic pharma/biotech authors"
authors = ["Your Name <your.email@example.com>"]
packages = [{include = "pubmed"}]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.31.0"
pandas = "^2.2.2"
typer = "^0.9.0"
xmltodict = "^0.13.0"

[tool.poetry.scripts]
get-papers-list = "cli:main"
