[tool.poetry]
name = "get-papers-list"
version = "0.1.0"
description = "Fetches PubMed research papers with non-academic authors from pharma/biotech."
authors = ["Your Name <your.email@example.com>"]
packages = [{ include = "pubmed" }]

[tool.poetry.scripts]
get-papers-list = "cli:main"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.31.0"
xmltodict = "^0.13.0"
pandas = "^2.0.0"
